# rustylink

./: .gitignore  Cargo.toml  README.md  Simulink_UI_Test.slx
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: analyze_libraries.rs  binary_benchmark.rs  check_libraries.rs  egui_editor.rs  egui_viewer.rs  find_manual_switches.rs  list_blocks.rs  roundtrip_compare.rs  tree.rs
icons_source/: .gitignore  convert_tex.sh
icons_source/discrete/: discrete_derivative.tex
icons_source/matrix/: hermitian_transpose.tex  matrix_square.tex  matrix_transpose.tex
src/: block.rs  block_types.rs  color.rs  egui_app.rs  label_place.rs  lib.rs  main.rs  mask_eval.rs  model.rs  parser.rs
src/builtin_libraries/: matrix_library.rs  mod.rs  simulink_dashboard.rs  simulink_discrete.rs  simulink_logic_and_bit_ops.rs  simulink_math_operations.rs  simulink_signal_routing.rs  virtual_library.rs
src/editor/: block_catalog.rs  mod.rs  operations.rs  selection.rs  state.rs  ui.rs
src/egui_app/: dashboard_widgets.rs  geometry.rs  icon_assets.rs  mod.rs  navigation.rs  render.rs  scope_widget.rs  state.rs  text.rs  ui.rs
src/egui_app/ui/: colors.rs  corner_ops.rs  dialogs.rs  helpers.rs  line_coloring.rs  mod.rs  signal_routing.rs  tests.rs  types.rs  update.rs  view_transform.rs
src/generator/: archive.rs  mod.rs  system_xml.rs
src/parser/: chart.rs  graphical_interface.rs  helpers.rs  library.rs  mod.rs  source.rs
tests/: binary_serialization.rs  block_catalog.rs  block_sid.rs  chart.rs  dashboard_ui_blocks.rs  editor_block_catalog.rs  editor_selection.rs  editor_state.rs  editor_ui.rs  egui_app_geometry.rs  egui_app_navigation.rs  egui_app_render.rs  egui_app_text.rs  egui_app_ui.rs  generator_system_xml.rs  graphical_interface.rs  instance_data.rs  label_place.rs  library_resolver.rs  lines.rs  mask.rs  mask_eval.rs  matrix_library.rs  parser_tests.rs  reference_block.rs  user_virtual_library.rs
