[package]
name = "rustylink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.3"
