[package]
name = "rustylink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.3"

[features]
# Optional GUI visualization using egui/eframe
egui = ["dep:eframe", "dep:egui"]

[dependencies.egui]
version = "0.27"
optional = true

[dependencies.eframe]
version = "0.27"
optional = true
default-features = true
features = ["wgpu"]
