[package]
name = "rustylink"
version = "1.1.0"
edition = "2024"
homepage = "https://github.com/ulikoehler/rustylink"
repository = "https://github.com/ulikoehler/rustylink"
description = "Visualize & analyze Simulink .slx files"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.3"
rayon = "1.11"
html-escape = "0.2"
quick-xml = "0.38"
bincode = { version = "2.0.1", features = ["serde"] }

[features]
# Optional GUI visualization using egui/eframe
highlight = ["dep:syntect", "dep:once_cell"]
egui = ["dep:eframe", "dep:egui", "dep:syntect", "dep:once_cell"]
## Optional mask evaluation (parses very small subset of MATLAB mask scripts to show display text)
mask = []

[dependencies.egui]
version = "0.32"
optional = true

[dependencies.eframe]
version = "0.32"
optional = true
default-features = true
features = ["wgpu"]

[dependencies.syntect]
version = "4.6"
optional = true

[dependencies.once_cell]
version = "1.20"
optional = true

[dev-dependencies]
tempfile = "3.10"
